# ollama-chat

./: .gitignore  CHANGES.txt  README.md  dev.datainquiry.ollama-chat.yml  meson.build
data/: ollama-chat.desktop
src/: Makefile  app_data.h  config.c  config.h  history.c  history.h  markdown.c  markdown.h  ollama_api.c  ollama_api.h  ollama_chat.c  ui.c  ui.h  ui_callbacks.c  ui_callbacks.h  ui_chat_view.c  ui_chat_view.h  ui_dialogs.c  ui_dialogs.h  ui_header.c  ui_header.h  ui_history.c  ui_history.h  ui_input.c  ui_input.h  web_search.c  web_search.h
